# wasi-shared-handles

./: Cargo.toml  README.md
examples/echo-server/: Cargo.toml
examples/echo-server/src/: main.rs
examples/memory-bindings/: Cargo.toml
examples/memory-bindings/src/: error.rs  generated.rs
examples/read-write/: Cargo.toml
examples/read-write/src/: main.rs
src/: handle.rs  main.rs  memory.rs  memory.witx  socket.rs  socket.witx  typenames.witx
