[package]
name = "wasi-shared-handles"
version = "0.1.0"
authors = ["Daiki Ueno <dueno@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
rustls = "0.18"
wasmtime = { path = "../wasmtime/crates/wasmtime", version = "0.21.0", default-features = false }
wasmtime-runtime = { path = "../wasmtime/crates/runtime", version = "0.21.0" }
wasmtime-wiggle = { path = "../wasmtime/crates/wiggle/wasmtime", version = "0.21.0" }
wasmtime-wasi = { path = "../wasmtime/crates/wasi", version = "0.21.0" }
wiggle = { path = "../wasmtime/crates/wiggle", version = "0.21.0" }
wasi-common = { path = "../wasmtime/crates/wasi-common", version = "0.21.0" }
